--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,19 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend da aplicação.",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "nodemon ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "ts-node": "^10.9.2"
   }
 }
