--- a/backend/src/.env
+++ b/backend/src/.env
@@ -1,3 +1,3 @@
 DB_TYPE=BDR
-AWS_ACCESS_KEY_ID=AKIAS5Y27E3II6AWCN5L
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
