--- a/backend/GatewayService/package.json
+++ b/backend/GatewayService/package.json
@@ -2,12 +2,12 @@
   "name": "gatewayservice",
   "version": "1.0.0",
   "description": "API Gateway Service.",
-  "main": "index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "nodemon ./src/index.ts"
   },
   "author": "Dário Vasconcelos",
-  "license": "MIT",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.3",
     "express-http-proxy": "^2.0.0",
@@ -15,6 +15,12 @@
     "opossum": "^8.1.3"
   },
   "devDependencies": {
-    "@types/node": "^20.11.25"
+    "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.6",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.19",
+    "@types/opossum": "^8.1.6",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
   }
 }
