--- a/backend/GatewayService/Dockerfile
+++ b/backend/GatewayService/Dockerfile
@@ -2,8 +2,12 @@ FROM node:20
 
 WORKDIR /app
 COPY package*.json ./
+
+RUN npm install -g nodemon
+RUN npm install -g ts-node
 RUN npm install
+
 COPY . .
 EXPOSE 3100
 
-CMD npm test
+CMD npm run test
