--- a/backend/GatewayService/package.json
+++ b/backend/GatewayService/package.json
@@ -12,7 +12,9 @@
     "express": "^4.18.3",
     "express-http-proxy": "^2.0.0",
     "morgan": "^1.10.0",
-    "opossum": "^8.1.3"
+    "opossum": "^8.1.3",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
