--- a/backend/GatewayService/package.json
+++ b/backend/GatewayService/package.json
@@ -9,20 +9,20 @@
   "author": "Dário Vasconcelos",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "express-http-proxy": "^2.0.0",
     "morgan": "^1.10.0",
-    "opossum": "^8.1.3",
     "nodemon": "^3.1.0",
+    "opossum": "^8.1.3",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.13",
     "@types/express-http-proxy": "^1.6.6",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^20.11.19",
-    "@types/opossum": "^8.1.6",
-    "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2"
+    "@types/morgan": "^1.9.2",
+    "@types/node": "^20.11.25",
+    "@types/opossum": "^8.1.3"
   }
 }
