--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 services:
   front:
     extends:
@@ -8,6 +8,17 @@ services:
     extends:
       file: backend/GatewayService/docker-compose.yaml
       service: app
+  discovery:
+    extends:
+      file: backend/DiscoveryService/docker-compose.yaml
+      service: app
+  consul-server:
+    image: hashicorp/consul:latest
+    container_name: badger
+    ports:
+      - "8500:8500"
+      - "8600:8600/udp"
+    command: "agent -server -ui -node=server-1 -bootstrap-expect=1 -client=0.0.0.0"
   notification:
     extends:
       file: backend/NotificationService/docker-compose.yaml
