--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "scripts": {
     "build": "docker-compose build",
-    "up": "docker-compose up"
+    "up": "docker-compose up",
+    "start": "docker-compose up --build"
   },
-  "dependencies": {
-    },
-  "devDependencies": {
-    
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
