--- a/backend/OrderService/package.json
+++ b/backend/OrderService/package.json
@@ -13,12 +13,16 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0",
     "nodemon": "^3.0.2",
+    "opossum": "^8.1.3",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-http-proxy": "^1.6.6",
     "@types/node": "^20.11.17",
+    "@types/opossum": "^8.1.6",
     "ts-node": "^10.9.2"
   }
 }
